--- a/人工智能.md
+++ b/人工智能.md
@@ -474,11 +474,11 @@ $$
 
 #### Perplexity
 
-假设测试集语料库是一个由m个单词$w_1,w_2,\cdots,w_m$组成的序列，用$PP$表示Perplexity，公式如下：
+用于衡量语言模型生成的语句是否是合情合理的，逻辑上是连贯的。假设测试集语料库是一个由m个单词$w_1,w_2,\cdots,w_m$组成的序列，用$PP$表示Perplexity，公式如下：
 $$
 PP({w_1},{w_2}, \cdots ,{w_m}) = \root m \of {{1 \over {P({w_1},{w_2}, \cdots ,{w_m})}}}
 $$
-Perplexity越低，模型表现越好。为了衡量语言模型生成的语句是否是合情合理的，逻辑上是连贯的。
+Perplexity越低，模型表现越好。
 
 #### Perplexity例子
 
