--- a/多媒体.md
+++ b/多媒体.md
@@ -147,7 +147,7 @@ if (ret)
 printf("codec open success");
 ```
 
-现在可以解码视频了，解码是一帧一帧解码
+解码视频是一帧一帧解码
 
 ```c
 AVFrame* frame = av_frame_alloc();  // 储存原始帧
@@ -214,7 +214,176 @@ sws_freeContext(swsCtx);
 
 ### 重采样音频
 
-重采样音频与解码视频前半部分类似，
+重采样音频与解码视频前半部分类似，重采样使用的是 libswresample，转换上下文和数据包的声明如下
+
+```c
+struct SwrContext* swr_ctx = swr_alloc();
+
+/* set options */
+av_opt_set_chlayout(swr_ctx, "in_chlayout", &src_ch_layout, 0);
+av_opt_set_int(swr_ctx, "in_sample_rate", src_rate, 0);
+av_opt_set_sample_fmt(swr_ctx, "in_sample_fmt", src_sample_fmt, 0);
+
+av_opt_set_chlayout(swr_ctx, "out_chlayout", &dst_ch_layout, 0);
+av_opt_set_int(swr_ctx, "out_sample_rate", dst_rate, 0);
+av_opt_set_sample_fmt(swr_ctx, "out_sample_fmt", dst_sample_fmt, 0);
+
+swr_init(swr_ctx);
+
+AVPacket* packet = (AVPacket*)av_malloc(sizeof(AVPacket));
+```
+
+在重采样音频时，同样也是一帧一帧处理，首先定义源文件的一帧的大小，然后计算目标文件一帧的大小
+
+```c
+int src_nb_samples = 1024;
+
+// 源文件的一帧
+AVFrame* frame = av_frame_alloc();
+frame->sample_rate = src_rate;
+frame->ch_layout = src_ch_layout;
+frame->format = src_sample_fmt;
+frame->nb_samples = src_nb_samples;
+
+av_frame_get_buffer(frame, 0);
+
+int max_dst_nb_samples, dst_nb_samples;
+max_dst_nb_samples = dst_nb_samples = av_rescale_rnd(src_nb_samples, dst_rate, src_rate, AV_ROUND_UP);
+AVFrame* e_frame = av_frame_alloc();
+e_frame->nb_samples = dst_nb_samples;
+e_frame->format = e_cc->sample_fmt;
+e_frame->sample_rate = dst_rate;
+e_frame->ch_layout = dst_ch_layout;
+
+av_frame_get_buffer(e_frame, 0);
+```
+
+现在开始重采样，注意可能需要重新分配源文件的帧大小
+
+```c
+ while (av_read_frame(fc, packet) >= 0)
+ {
+     //fprintf("package idx : %d \n", packet->stream_index);
+     if (packet->stream_index == AudioStream)
+     {
+         avcodec_send_packet(cc, packet);
+         avcodec_receive_frame(cc, frame);
+
+         dst_nb_samples = av_rescale_rnd(swr_get_delay(swr_ctx, src_rate) + src_nb_samples, dst_rate, src_rate, AV_ROUND_UP);
+         if (dst_nb_samples > max_dst_nb_samples) {
+             e_frame->nb_samples = dst_nb_samples;
+             av_freep(&e_frame->data[0]);
+             av_frame_get_buffer(e_frame, 0);
+             max_dst_nb_samples = dst_nb_samples;
+         }
+         av_frame_make_writable(e_frame);  // 不一定需要
+         ret = swr_convert(swr_ctx, e_frame->data, dst_nb_samples, frame->data, src_nb_samples);
+         if (ret < 0) {
+             fprintf(stderr, "Error while converting\n");
+             goto end;
+         }
+     }
+ }
+```
+
+此时如果直接将 `e_frame->data` 会无法播放，因此需要对重采样后的数据进行编码。
+
+
+### 编码音频
+
+和解码时类似，定义编码上下文，找到编码器
+
+```c
+AVCodec* e_codec;
+AVCodecContext* e_cc = NULL;
+e_codec = avcodec_find_encoder(AV_CODEC_ID_PCM_S16LE);
+
+e_cc = avcodec_alloc_context3(e_codec);
+e_cc->bit_rate = 16000 * 16 * 2;  // bit rate = 采样率 * 比特位数 * channels
+e_cc->sample_rate = dst_rate;
+e_cc->sample_fmt = AV_SAMPLE_FMT_S16;
+```
+
+还需要定义解码帧和数据包
+
+```c
+AVFrame* e_frame = av_frame_alloc();
+e_frame->nb_samples = dst_nb_samples;
+e_frame->format = e_cc->sample_fmt;
+e_frame->sample_rate = dst_rate;
+av_channel_layout_copy(&e_frame->ch_layout, &e_cc->ch_layout);
+
+av_frame_get_buffer(e_frame, 0);
+
+AVPacket* e_pkt = av_packet_alloc();
+
+```
+
+开始编码
+
+```c
+while (av_read_frame(fc, packet) >= 0)
+{
+    //fprintf("package idx : %d \n", packet->stream_index);
+    if (packet->stream_index == AudioStream)
+    {
+        // 一些处理
+        encode(e_cc, e_frame, e_pkt, dst_file);
+    }
+}
+encode(e_cc, NULL, e_pkt, dst_file);
+```
+
+encode 函数如下
+
+```c
+static void encode(AVCodecContext* ctx, AVFrame* frame, AVPacket* pkt,
+    FILE* output)
+{
+    int ret;
+
+    /* send the frame for encoding */
+    ret = avcodec_send_frame(ctx, frame);
+    // 错误处理
+    /* read all the available output packets (in general there may be any
+     * number of them */
+    while (ret >= 0) {
+        ret = avcodec_receive_packet(ctx, pkt);
+        if (ret == AVERROR(EAGAIN) || ret == AVERROR_EOF)
+            return;
+        else if (ret < 0) {
+            fprintf(stderr, "Error encoding audio frame\n");
+            exit(1);
+        }
+        fwrite(pkt->data, 1, pkt->size, output);
+        av_packet_unref(pkt);  // 重置数据包
+    }
+}
+```
+
+
+### 缩放视频
+
+基本思路和解码视频一致，只不过在 `sws_getContext` 中设置参数时额外设置目标宽度和高度
+
+```c
+int dst_w = 160, dst_h = 120;
+enum AVPixelFormat src_pix_fmt = codecpar->format;
+enum AVPixelFormat dst_pix_fmt = AV_PIX_FMT_RGB8;
+swsCtx = sws_getContext(src_w, src_h, src_pix_fmt, dst_w, dst_h, dst_pix_fmt, SWS_BILINEAR, NULL, NULL, NULL);
+```
+
+得到的结果可以使用 ffplay 播放，命令如下
+
+```sh
+ffplay -f rawvideo -pixel_format rgb8 -video_size 160x120 out.raw
+```
+
+
+> [!NOTE]
+> 注意 ffplay 的参数可能随着版本的变化有所改变
+
+
 
 
 ## ffmpeg 命令行
@@ -306,10 +475,40 @@ ffmpeg -i index.m3u8 -c copy out.mp4
 
 # WebRTC
 
-一个实时通信（音视频、文件传输、屏幕共享等）的基于浏览器的 API，一般的 WebRTC 直接使用 js 编写，通过 html 可视化。
+一个实时通信（音视频、文件传输、屏幕共享等）的基于浏览器的 API，WebRTC 可以直接使用 js 编写，通过 html 可视化效果。
 
 
-## 其它实现
+## 基本知识
+
+### 协议介绍
+
+
+#### ICE
+
+[交互式连接创建](https://zh.wikipedia.org/wiki/%E4%BA%92%E5%8B%95%E5%BC%8F%E9%80%A3%E6%8E%A5%E5%BB%BA%E7%AB%8B)（Interactive Connectivity Establishment，ICE）是一个允许浏览器和其它浏览器建立连接的协议框架。在实际的网络当中，有很多原因导致 A 端到 B 端不能简单直连，需要绕过阻止建立连接的防火墙，给设备分配一个唯一可见的地址（通常情况下大部分设备没有一个固定的公网地址），如果路由器不允许主机直连，还得通过一台服务器转发数据。ICE 通过使用 STUN 或者 TURN 等技术完成上述工作。
+
+#### STUN
+
+NAT （网络地址转换，将私有 ip 地址转换为公网地址）的会话穿越功能[Session Traversal Utilities for **NAT** (STU**N**)](http://en.wikipedia.org/wiki/STUN) 是一个允许位于 NAT 后的客户端找出自己的公网地址，判断出路由器阻止直连的限制方法的协议。客户端通过给公网的 STUN 服务器发送请求获得自己的公网地址信息，以及是否能够被（NAT 路由器）访问。
+
+![](https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Protocols/webrtc-stun.png)
+
+#### TURN
+
+一些路由器使用一种“对称型 NAT”的 NAT 模型。这意味着路由器只接受和对端先前建立的连接（就是下一次请求建立新的连接映射）。NAT 的中继穿越方式[Traversal Using Relays around NAT (TURN)](http://en.wikipedia.org/wiki/TURN) 通过 TURN 服务器中继所有数据的方式来绕过“对称型 NAT”。需要在 TURN 服务器上创建一个连接，然后告诉所有对端设备发包到服务器上，TURN 服务器再把包转发给你。这种方式开销很大，只有在没得选择的情况下采用。
+
+![](https://developer.mozilla.org/zh-CN/docs/Web/API/WebRTC_API/Protocols/webrtc-turn.png)
+
+
+#### SDP
+
+会话描述协议[Session Description Protocol (SDP)](http://en.wikipedia.org/wiki/Session_Description_Protocol) 是一个描述多媒体连接内容的协议，例如分辨率，格式，编码，加密算法等。所以在数据传输时两端都能够理解彼此的数据。本质上，这些描述内容的元数据并不是媒体流本身。从技术上讲，SDP 并不是一个真正的协议，而是一种数据格式，用于描述在设备之间共享媒体的连接。
+
+SDP 由一行或多行 UTF-8 文本组成，每行以一个字符的类型开头，后跟等号（“ =”），然后是包含值或描述的结构化文本，其格式取决于类型。以给定字母开头的文本行通常称为“字母行”。例如，提供媒体描述的行的类型为“m”，因此这些行称为“m 行”。
+
+
+
+## 编程语言实现
 
 
 ### golang
@@ -368,7 +567,8 @@ https://developers.google.cn/codelabs/webrtc-web
   
 const mediaStreamConstraints = {  
     video: true,  
-    // audio: true   // 只演示 video}  
+    // audio: true   // 只演示 video
+}  
   
 // 获取 dom 元素  
 const localVideo = document.querySelector("video")  
@@ -409,7 +609,7 @@ const hdConstraints = {
 
 [`MediaTrackConstraints` 规范](https://w3c.github.io/mediacapture-main/getusermedia.html#media-track-constraints)列出了所有可能的限制条件类型，但并非所有浏览器都支持全部选项。
 
-如可以为视频加上 css 过滤器（在样式文件中添加）：
+如可以为视频加上 css 过滤器（在 css 文件中添加）：
 
 ```css
 video {  
