--- a/工具使用.md
+++ b/工具使用.md
@@ -44,36 +44,121 @@
 
 ## 一些指令
 
-1. `git status`： 查看当前git状态，用于判断是否已经准备好推送分支
-    
-2. `git add .`: 添加所有的文件
-    
-3. `git commit -m "..."`: 添加推送时的描述
-    
-4. `git remote add origin git网址`: 连接要推送的目的网址
-    
-5. `git push -u origin 分支名称`: 推送代码
-    
-6. `git checkout -b 新分支名称`: 切换到一个新的分支
-    
-7. `git branch`: 查看当前所有分支
-    
-8. `git log`: 查看git的提交版本和id，可用于查看需要恢复的版本号
-    
-9. `git reset --hard 版本号`: 恢复到指定版本
-    
-10. `git push -f origin 分支名称`: 强制push
-    
-11. `git clone git网址`: 克隆一个项目到本地
-    
-12. `git branch 目标分支名`: 切换至目标分支
-    
-13. `git merge 目标分支名`: 将目标分支与本分支合并
-    
-14. `git push`: 分支合并后推送至云端
-    
 
-git分为本地仓库和远程仓库，一般情况写完代码，commit到本地仓库（生成本地仓的commit ID，代表当前提交代码的版本号），然后push到远程仓库（记录这个版本号）。
+克隆一个项目到本地
+
+```sh
+git clone <git url>
+```
+
+
+初始化本地仓库
+
+```sh
+mkdir localRepo & cd localRepo
+git init
+```
+
+
+查看当前git状态，用于判断是否已经准备好推送分支
+
+```sh
+git status
+```
+
+添加所有的文件
+
+```sh
+git add .
+```
+
+添加推送时的描述
+
+```sh
+git commit -m "..."
+```
+
+添加远程仓库地址
+
+```sh
+git remote add origin <git url>
+```
+
+
+将本地分支推送至远程仓库默认分支
+
+```sh
+git push
+```
+
+
+推送代码至指定分支
+
+```sh
+git push -u origin <branch name>
+```
+
+
+强制push
+
+```sh
+git push -f origin <branch name>
+```
+
+
+查看当前所有分支（可查看默认分支）
+
+```sh
+git branch
+```
+
+
+创建一个分支
+
+```sh
+git branch <new branch name>
+```
+
+删除一个分支（不能是默认分支）
+
+```sh
+git branch -d <branch name>
+```
+
+切换目标分支
+
+```sh
+git checkout <new branch name>
+```
+
+创建一个分支并且切换至该分支
+
+```sh
+git checkout -b <new branch name>
+```
+
+查看git的提交版本和id，可用于查看需要恢复的版本号
+
+```sh
+git log
+```
+
+
+恢复到指定版本
+
+```sh
+git reset --hard <version number>
+```
+
+
+将目标分支与当前分支合并
+
+```sh
+git merge <target branch name>
+```
+
+
+git 分为本地仓库和远程仓库，一般情况写完代码，commit到本地仓库（生成本地仓的commit ID，代表当前提交代码的版本号），然后push到远程仓库（记录这个版本号）。
 
 ```sh
 echo "# md2html" >> README.md  
@@ -113,13 +198,16 @@ sudo apt-get install openssh-server
 ```
 
 4. 使用 ifconfig 查看网址
+
+```
 ens33 .....  
 inet 192.168.40.128
+```
+
 
 ### Windows端
 
 需要安装 Fillzilla，主机输入网址，用户名输入xmj 密码输入 端口输入22
-
 
 
 # WebAssembly
