--- a/数值分析.md
+++ b/数值分析.md
@@ -46,7 +46,7 @@ $$
 
 #### 机器数的表示
 
-**举例**：fl(9.4)对应的存储在机器中的表达？
+**举例**：`fl(9.4)` 对应的存储在机器中的表达？
 
 对于指数：3 + 1023 = 1026 = ${\left( {10000000010} \right)_2}$，再加上符号位0，则为
 $$
@@ -112,7 +112,7 @@ $$
 
 **二分法**
 
->给定初始区间[a,b] 使得f(a)f(b)<0
+>给定初始区间 `[a,b]` 使得f(a)f(b)<0
 >while (b-a)/2 > TOL
 >	c = (a+b) / 2
 >	if f(c) = 0, stop,end
@@ -122,7 +122,7 @@ $$
 >		a=c
 >	end
 >end
->最终的区间[a,b]中包含一个根
+>最终的区间 `[a,b]` 中包含一个根
 >近似根为(a+b)/2
 
 **二分法的求解误差**
@@ -133,7 +133,7 @@ $$
 
 **定义**：如果误差小于$0.5\times 10^{-p}$，解精确到小数点后p位。
 
-**举例**：使用二分法求解函数在区间[0,1]上的解，要求解精确到小数点后6位，则至少要迭代多少次。
+**举例**：使用二分法求解函数在区间 `[0,1]` 上的解，要求解精确到小数点后6位，则至少要迭代多少次。
 $$
 {{b - a} \over {{2^{n + 1}}}} = {1 \over {{2^{n + 1}}}} < 0.5 \times {10^{ - 6}} \Rightarrow n \ge 20
 $$
@@ -145,7 +145,7 @@ $$
 
 #### 函数的不动点
 
-**定义**：当g(r)=r，实数r是函数g的不动点。
+**定义**：当 g(r)=r，实数 r 是函数 g 的不动点。
 
 **不动点迭代**
 
@@ -174,17 +174,17 @@ $$
 
 ![image-20231101185232379](D:\TyporaImages\image-20231101185232379.png)
 
-可以看到对于g(x)=1-x^3而言，在迭代时会出现发散的情况，因此最后无法收敛，而是否能够收敛与函数在不动点附近的斜率有关。
+可以看到对于 $g(x)=1-x^3$ 而言，在迭代时会出现发散的情况，因此最后无法收敛，而是否能够收敛与函数在不动点附近的斜率有关。
 
 
 
 #### 不动点迭代的线性收敛
 
-**定义**：令$e_i$表示迭代过程中第i步时的误差，如果
+**定义**：令$e_i$表示迭代过程中第 i 步时的误差，如果
 $$
 \mathop {\lim }\limits_{i \to \infty } {{{e_{i + 1}}} \over {{e_i}}} = S < 1
 $$
-该方法被称为满足线性收敛，收敛速度为S。
+该方法被称为满足线性收敛，收敛速度为 S。
 
 **定理**：假设函数g是连续可微函数，g(r)=r，S=$|g'(r)|$<1，则不动点迭代对于一个足够接近r的初始估计，以速度S线性收敛到不动点r。
 
@@ -208,9 +208,9 @@ $$
 
 
 
-**定义**：如果迭代方法对于一个足够接近r的初值能收敛到r，该迭代方法被称为**局部收敛**到r。
+**定义**：如果迭代方法对于一个足够接近 r 的初值能收敛到 r，该迭代方法被称为**局部收敛**到 r。
 
-**举例**：解释为什么不动点迭代g(x)=cos(x)收敛
+**举例**：解释为什么不动点迭代 g(x)=cos(x) 收敛
 
 g'(r)=-sin(r)=-sin(0.74)≈-0.67，绝对值比1小，对应解r≈0.74会把附近的初始猜测值吸引过来。
 
@@ -230,8 +230,7 @@ $$
 
 **举例**：使用二分法计算函数$f(x)=x^3-2x^2+{4\over3}x-{8\over 27}$的根，精确到小数点后6位。
 
-在使用二分法时，在16步计算后便出现错误，f(0.6666641)=0，无法精确到小数点后6位。即使使用MATLAB提供的fzero.m函数计算仍然无法找到5位以上的正确数位。
-
+在使用二分法时，在16步计算后便出现错误，f(0.6666641)=0，无法精确到小数点后6位。即使使用MATLAB提供的 fzero.m 函数计算仍然无法找到5位以上的正确数位。
 
 
 **定义**：假设f是一个函数，r是一个根，意味着满足f(r)=0。假设$x_a$是r的近似值，对于根求解问题，近似$x_a$的**后向误差**是$|f(x_a)|$，**前向误差**是$|r-x_a|$。
@@ -253,16 +252,16 @@ A(方程) ---> B(方程求解器) ---> C(解)
 
 #### 威尔金森多项式
 
-由于函数在多重根位置上f'为0，所以在重根附近形状很平。正因为如此，分离重根可能会遇到困难，但是多重根问题仅仅是冰山一角，没有多重根问题时也可能也会出现问题，比如威尔金森多项式。
+由于函数在多重根位置上 $f'$ 为0，所以在重根附近形状很平。正因为如此，分离重根可能会遇到困难，但是多重根问题仅仅是冰山一角，没有多重根问题时也可能也会出现问题，比如威尔金森多项式。
 $$
 W(x)=(x-1)(x-2)\cdots(x-20)
 $$
 
 #### 根搜索的敏感性
 
-如果在输人中是一个小误差，f在这种情况下对问题进行求解，造成输出中的大问题，这样的问题被称为敏感性问题。
+如果在输入中是一个小误差，在这种情况下对问题进行求解，造成输出中的大误差，这种情况被称为敏感性问题。
 
-假设对输入做了一个小变化εg(x)，其中ε很小，令Δr对应根中的变化，则
+假设对输入做了一个小变化 εg(x)，其中 ε 很小，令 Δr 对应根中的变化，则
 $$
 f(r+\Delta r)+\varepsilon g(r+\Delta r)=0
 $$
@@ -278,6 +277,7 @@ $$
 $$
 \Delta r \approx {{\varepsilon g(r)} \over {f'(r) + \varepsilon g'(r)}} \approx {{\varepsilon g(r)} \over {f'(r)}}
 $$
+
 **根的敏感公式**
 
 > 假设r是函数f(x)的根，并且r+Δr是f(x)+εg(r)的根，则当ε<<f'(r)时，
@@ -329,15 +329,15 @@ x_{i+1}={x_i\over 2}
 $$
 误差公式是$e_{i+1}=e_i/2$，是线性收敛。
 
-**定理**：假设在区间[a,b]上，(m+1)阶连续可微函数f在r点有一个m阶多重根，则牛顿方法局部收敛到r，第i步误差$e_i$满足
+**定理**：假设在区间 `[a,b]` 上，(m+1)阶连续可微函数f在r点有一个m阶多重根，则牛顿方法局部收敛到r，第i步误差$e_i$满足
 $$
 \mathop {\lim }\limits_{i \to \infty } {{{e_{i + 1}}} \over {{e_i}}} = S = {{m - 1} \over m}
 $$
-**定理**：如果在[a,b]区间上f是(m+1)阶连续函数，包含m>1的多重根，则改进的牛顿方法为：
+**定理**：如果在 `[a,b]` 区间上f是(m+1)阶连续函数，包含m>1的多重根，则改进的牛顿方法为：
 $$
 x_{i+1}=x_i-{mf(x_i)\over f'(x_i)}
 $$
-收敛到r，并具有二次收敛速度。
+收敛到 r，并具有二次收敛速度。
 
 牛顿方法如同FPI（不动点迭代），可能不会收敛到根．下面的例子是一种可能不收敛的情况。
 
@@ -374,18 +374,17 @@ c对应的便是a和b所定义的直线与x轴的交点。
 试位方法开始表现得比二分法和割线方法都要好，具有二者最好的性质。但是，二分法在每一步中可以确保消除1/2的不确定性，试位方法却没有能力做出这样的保证，而且在一些例子中可能收敛很慢。
 
 
-
 **Muller方法**是割线方法在不同方向的推广。该方法不是计算经过先前两个点的直线和x轴的交点，而是使用三个前面生成的点$x_0$、$x_1$、$x_2$，画出通过它们的抛物线y=p(x)，并计算抛物线和x轴的交点。一般来讲，抛物线会生成0个或者2个交点。如果有两个交点，接近上一步中的$x_2$的点会被选作$x_3$，通过简单的二次公式计算，就可以确定两种可能。如果抛物线和x轴不相交，就会出现复数解，能够处理复数代数的软件就可以计算对应的解。
 
-**逆二次插值(IQI)**是割线方法到抛物线的一种相近的泛化方法，但是使用形如x=p(y)的抛物线，而不是 Muller方法所使用的y=p(x)，这个抛物线和x轴只有一个交点。经过三点(a,A)，(b,B)，(c,C)的二阶多项式x=P(y)为：
+**逆二次插值(IQI)** 是割线方法到抛物线的一种相近的泛化方法，但是使用形如 x=p(y) 的抛物线，而不是 Muller 方法所使用的 y=p(x)，这个抛物线和 x 轴只有一个交点。经过三点(a,A)，(b,B)，(c,C)的二阶多项式 x=P(y) 为：
 $$
 P(y) = a{{(y - B)(y - C)} \over {(A - B)(A - C)}} + b{{(y - A)(y - C)} \over {(B - A)(B - C)}} + c{{(y - A)(y - B)} \over {(C - A)(C - B)}}
 $$
-其中P(A)=a，P(B)=b，P(C)=c，用y=0带入可得得到抛物线和x轴的交点，可以得到
+其中P(A)=a，P(B)=b，P(C)=c，用 y=0 带入可得抛物线和 x 轴的交点，可以得到
 $$
 P(0) = c - {{r(r - q)(c - b) + (1 - r)s(c - a)} \over {(q - 1)(r - 1)(s - 1)}}
 $$
-其中q=f(a)/f(b)，r=f(c)/f(b)，s=f(c)/f(a)。
+其中 q=f(a)/f(b)，r=f(c)/f(b)，s=f(c)/f(a)。
 
 **逆二次插值**
 
@@ -399,7 +398,7 @@ $$
 
 #### Brent方法
 
-用于连续函数f，区间的边界是a和b，同时f(a)f(b)<0。Brent方法记录当前点$x_i$，该点具有最优的后向误差，同时有包含根的区间$[a_i,b_i]$。简单来讲，尝试使用逆二次方法，并在下述情况下，使用结果来替代$x_i$、$a_i$、$b_i$中的一个：
+用于连续函数 f，区间的边界是 a 和 b，同时 f(a)f(b)<0。Brent 方法记录当前点$x_i$，该点具有最优的后向误差，同时有包含根的区间$[a_i,b_i]$。简单来讲，尝试使用逆二次方法，并在下述情况下，使用结果来替代$x_i$、$a_i$、$b_i$中的一个：
 
 （1）后向误差得到改进；
 
@@ -445,13 +444,13 @@ $$
 
 **定义**：令$x_a$是线性方程组Ax=b的近似解，余项是向量r=b-A$x_a$，**后向误差**是余项的范数${\left\| {b - A{x_a}} \right\|_\infty }$，**前向误差**是${\left\| {x - {x_a}} \right\|_\infty }$。
 
-**举例**：找出近似解[-1,3.0001]的后向误差和前向误差，方程组如下：
+**举例**：找出近似解 `[-1,3.0001]` 的后向误差和前向误差，方程组如下：
 $$
 \eqalign{
   & {x_1} + {x_2} = 2  \cr 
   & 1.0001{x_1} + {x_2} = 2.0001 \cr}
 $$
-精确解为[1,1]，后向误差计算：
+精确解为 `[1,1]`，后向误差计算：
 $$
 b - A{x_a} = \left[ {\matrix{
    2  \cr 
@@ -493,7 +492,7 @@ $$
 
 可以看到(1,1)是它们的交点，不过(-1,3.0001)也差一点在两条直线上（图中的差异是人为放大了1000倍，实际上离得非常近）。
 
-把余项表示为$r=b-Ax_a$，系统Ax=b的**相对后向误差**定义为
+把余项表示为 $r=b-Ax_a$，系统 Ax=b 的**相对后向误差**定义为
 $$
 {{{{\left\| r \right\|}_\infty }} \over {{{\left\| b \right\|}_\infty }}}
 $$
@@ -529,7 +528,7 @@ $$
 $$
 $\left\| A^{-1} \right\|=20001$，A的条件数是cond(A)=40004.0001，在这个系统中，对于任何其他的b，误差放大因子将小于或者等于40004.0001。
 
-在浮点算术中，相对后向误差不可能小于${\varepsilon _{mach}}$，这是由于b的元素的存储已经引入了和${\varepsilon _{mach}}$差不多大的误差，在求解Ax=b可能出现的相关前向误差是${\varepsilon _{mach}}$·cond(A)。换句话讲，如果$cond(A) \approx {10^k}$，我们在计算x时，将丢掉k位数字精度。
+在浮点算术中，相对后向误差不可能小于${\varepsilon _{mach}}$，这是由于 b 的元素的存储已经引入了和${\varepsilon _{mach}}$差不多大的误差，在求解 Ax=b 可能出现的相关前向误差是${\varepsilon _{mach}}$·cond(A)。换句话讲，如果$cond(A) \approx {10^k}$，我们在计算 x 时，将丢掉 k 位数字精度。
 
 以上例为例，$cond(A) \approx 4 \times {10^4}$，对于双精度16位精确度而言，只能求解到大约12位的精确数字（实际上会更低，matlab只能求解到11位精确值）。
 
@@ -549,7 +548,7 @@ $$
   & {10^{ - 20}}{x_1} + {x_2} = 1  \cr 
   & {x_1} + 2{x_2} = 4 \cr} 
 $$
-（1）精确解约为[2,1]
+（1）精确解约为`[2,1]`
 
 （2）IEEE双精度，
 $$
@@ -564,7 +563,7 @@ $$
 
  } } \right]
 $$
-由于存在舍入，${2 - {{10}^{20}}}$和${4 - {{10}^{20}}}$存为${ - {{10}^{20}}}$，因此解为[0,1]
+由于存在舍入，${2 - {{10}^{20}}}$和${4 - {{10}^{20}}}$存为${ - {{10}^{20}}}$，因此解为 `[0,1]`
 
 （3）IEEE双精度，使用行交换
 $$
@@ -579,14 +578,9 @@ $$
 
  } } \right]
 $$
-同样存在舍入导致${1 - 2\times{{10}^{-20}}}$和${1 - 4\times{{10}^{-20}}}$存为1，解得[2,1]，注意这里的结果是确切的结果，不像精确解存在微小的差距。
+同样存在舍入导致${1 - 2\times{{10}^{-20}}}$和${1 - 4\times{{10}^{-20}}}$存为1，解得 `[2,1]`，注意这里的结果是确切的结果，不像精确解存在微小的差距。
 
-第2种方法在消去过程中的乘子$10^{20}$，从底部的方程减去顶部方程的$10^{20}$倍，底部方程会被抑制，或者称为"swamp,"，尽管初始的时候有两个独立的方程或者源信息，但是经过第2种计算的消去，这里仅仅留下
-了顶部方程的两个副本。由于底部方程消失，出于所有实际的目的，我们不能指望计算结果可以满足底部的方程，实际上得到的解也不能满足对应的方程。
-
-而另一方面，第3种方法在消去过程中没有产生覆盖，因为乘子是$10^{-20}$， 在消去之后，原始的两个方程仍然存在，并且变为三角形式，结果是更加精确的近似解。
-
-高斯消去的过程中保证乘子尽可能小，同时避免淹没。幸运的是，通过对朴素的高斯消去法的简单修正，可以使得高斯消去法中的乘子的绝对值不大于1。这种新的原则，包括在表格中明智的行交换，称为部分主元方法，在下一节中将进行详细的描述。
+第2种方法在消去过程中的乘子$10^{20}$，从底部的方程减去顶部方程的$10^{20}$倍，底部方程会被抑制，或者称为"swamp,"，尽管初始的时候有两个独立的方程或者源信息，但是经过第2种计算的消去，这里仅仅留下了顶部方程的两个副本。由于底部方程消失，出于所有实际的目的，我们不能指望计算结果可以满足底部的方程，实际上得到的解也不能满足对应的方程。而另一方面，第3种方法在消去过程中没有产生覆盖，因为乘子是$10^{-20}$， 在消去之后，原始的两个方程仍然存在，并且变为三角形式，结果是更加精确的近似解。高斯消去的过程中保证乘子尽可能小，同时避免淹没。幸运的是，通过对朴素的高斯消去法的简单修正，可以使得高斯消去法中的乘子的绝对值不大于1。这种新的原则，包括在表格中明智的行交换，称为部分主元方法，在下一节中将进行详细的描述。
 
 
 
@@ -594,7 +588,7 @@ $$
 
 #### 部分主元
 
-部分主元包含在每一步消去步骤之前的比较，找到第一列中最大的一个元素，其对应行和主元行进行交换，在当前情况下，主元行是第一行。在消去过程中，对每一列都实施相同的策略。在消去第k列时，找到第p行，k≤p≤n，定位最大的$|a_{pk}|$，必要时交换第p行和第k行，然后继续进行消去。注意到使用部分主元方法保证所有乘子，或者L的元素的绝对值不大于1。通过这种对于高斯消去方法所进行的小的改变，淹没问题可以完全避免。
+部分主元包含在每一步消去步骤之前的比较，找到第一列中最大的一个元素，其对应行和主元行进行交换，在当前情况下，主元行是第一行。在消去过程中，对每一列都实施相同的策略。在消去第k列时，找到第 p 行，k≤p≤n，定位最大的$|a_{pk}|$，必要时交换第p行和第k行，然后继续进行消去。注意到使用部分主元方法保证所有乘子，或者 L 的元素的绝对值不大于1。通过这种对于高斯消去方法所进行的小的改变，淹没问题可以完全避免。
 
 **举例**：使用高斯消去的部分主元方法求解方程组
 $$
@@ -655,7 +649,7 @@ $$
 
  } } \right] \cr} 
 $$
-解得x=[1,1,-1]
+解得 `x=[1,1,-1]`
 
 
 
@@ -663,16 +657,14 @@ $$
 
 **定义**：置换矩阵是一个n×n的矩阵，其在每一行、每一列仅有一个1，其他全部为0。
 
-**定理**：令P是通过对单位矩阵实施一组特定的行交换后得到的一个n×n的置换矩阵。则对于任意的n×n矩阵 A，PA对应于对矩阵A实施同样的行交换得到的结果。
-
+**定理**：令P是通过对单位矩阵实施一组特定的行交换后得到的一个 n×n 的置换矩阵。则对于任意的n×n 矩阵 A，PA对应于对矩阵 A 实施同样的行交换得到的结果。
 
 
 #### PA=LU分解
 
-我们把关于高斯消去所知道的一切组合起来，进行PA=LU分解。这是部分主元的高斯消去的矩阵形式，PA=LU分解是求解线性方程组的主要方法。正如名字中所暗示的，PA=LU是对于矩阵A包含行交换的LU分解。在部分主元中，开始的时候我们并不知道需要进行置换的列，所以我们必须谨慎地把行置换的信息加
-入分解中，我们需要记录高斯消去法中所有的主元。
+我们把关于高斯消去所知道的一切组合起来，进行PA=LU分解。这是部分主元的高斯消去的矩阵形式，PA=LU分解是求解线性方程组的主要方法。正如名字中所暗示的，PA=LU是对于矩阵 A 包含行交换的 LU 分解。在部分主元中，开始的时候我们并不知道需要进行置换的列，所以我们必须谨慎地把行置换的信息加入分解中，我们需要记录高斯消去法中所有的主元。
 
-使用PA=LU求解方程组Ax=b时
+使用PA=LU求解方程组 Ax=b时
 $$
 \eqalign{
   & PAx = Pb  \cr 
@@ -796,8 +788,7 @@ x=$D^{-1}$(b-(L+U)x)
 
 #### 高斯-塞德尔方法和SOR
 
-高斯－塞德尔方法和雅可比方法的唯一差异是在前者中，最近更新的未知变量的值在每一步中都使用，即
-使更新发生在当前步骤。在使用相同步骤的情况下，该近似更加精确。如果收敛，高斯-塞德尔方法常常比雅可比方法收敛更快。
+高斯－塞德尔方法和雅可比方法的唯一差异是在前者中，最近更新的未知变量的值在每一步中都使用，即使更新发生在当前步骤。在使用相同步骤的情况下，该近似更加精确。如果收敛，高斯-塞德尔方法常常比雅可比方法收敛更快。
 
 **高斯-塞德尔方法**
 
@@ -1212,7 +1203,7 @@ $$
 
 #### 牛顿差商
 
-**定义**：用f[$x_1$...$x_n$] 表示（唯一）多项式的$x^{n-1}$项的系数，该多项式插值($x_1$,f($x_1$))，...，($x_n$,f($x_n$))。
+**定义**：用 f[$x_1$...$x_n$] 表示（唯一）多项式的$x^{n-1}$项的系数，该多项式插值($x_1$,f($x_1$))，...，($x_n$,f($x_n$))。
 
 **牛顿差商公式**：<span id="NewtonInterp"></span>
 $$
@@ -1283,11 +1274,11 @@ end  % 输出系数
 $$
 {{\left( {x - {x_1}} \right)\left( {x - {x_2}} \right) \cdots \left( {x - {x_n}} \right)} \over {n!}}{f^{(n)}}(c)
 $$
-从现在开始让我们把区间固定在[-1,1]。多项式插值误差的分子
+从现在开始让我们把区间固定在 `[-1,1]`。多项式插值误差的分子
 $$
 (x-x_1)(x-x_2)\cdots(x-x_n)
 $$
-本身是一个关于x的n阶多项式，并在区间[-1,1]上具有极值。是否可能在区间[-1,1]找到特定的$x_1$，...，$x_n$使得多项式插值误差的分子的最大值足够小？这被称为插值误差的最小最大问题。
+本身是一个关于x的n阶多项式，并在区间 `[-1,1]` 上具有极值。是否可能在区间`[-1,1]`找到特定的$x_1$，...，$x_n$使得多项式插值误差的分子的最大值足够小？这被称为插值误差的最小最大问题。
 
 **定理**：选择实数$-1\le x_1,\cdots, x_n\le 1$，使得
 $$
@@ -1305,7 +1296,7 @@ $$
 
 #### 切比雪夫多项式
 
-定义n阶切比雪夫多项式$T_n(x)=\cos (n\arccos x)$，对于每个n都是关于x的多项式。令y=arccosx，因而cosy=x。
+定义n阶切比雪夫多项式$T_n(x)=\cos (n\arccos x)$，对于每个n都是关于x的多项式。令 $y=\arccos x$，因而 $\cos y=x$。
 $$
 \eqalign{
   & {T_{n + 1}}(x) = \cos (n + 1)y = \cos (ny + y) = \cos ny\cos y - \sin ny\sin y  \cr 
@@ -1331,21 +1322,21 @@ $$
 
 #### 区间的变化
 
-关于切比雪夫插值的讨论局限在区间[-1,1]，可以将方法推广到一般的区间[a,b]，移动基点使得它们在区间[a,b]上的相对位置和在区间[-1,1]上一致。这可以通过如下两步实现：
+关于切比雪夫插值的讨论局限在区间 `[-1,1]`，可以将方法推广到一般的区间 `[a,b]`，移动基点使得它们在区间 `[a,b]` 上的相对位置和在区间 `[-1,1]` 上一致。这可以通过如下两步实现：
 
 （1）使用因子(b-a)/2拉伸点（这是两个区间长度的比值），
 
-（2）将点平移(b+a)／2，使得中心从0移动到区间[a,b]的中心。 
+（2）将点平移(b+a)／2，使得中心从0移动到区间 `[a,b]` 的中心。 
 
 换句话讲，从原始点
 $$
 \cos {{odd\pi } \over {2n}} \to {{b - a} \over 2}\cos {{odd\pi } \over {2n}} + {{b - a} \over 2}
 $$
-使用区间[a,b]上新的切比雪夫基点$x_1$，...，$x_n$，插值误差公式中分子部分的上界也发生了改变，这是由于对因子$x-x_i$拉伸(b-a)/2，结果最小最大值1/$2^{n-1}$必须被替换为${\left[ {\left( {b - a} \right)/2} \right]^n}/{2^{n - 1}}$。
+使用区间 `[a,b]` 上新的切比雪夫基点$x_1$，...，$x_n$，插值误差公式中分子部分的上界也发生了改变，这是由于对因子$x-x_i$拉伸(b-a)/2，结果最小最大值1/$2^{n-1}$必须被替换为${\left[ {\left( {b - a} \right)/2} \right]^n}/{2^{n - 1}}$。
 
 **切比雪夫插值节点**
 
-> 在区间[a,b]
+> 在区间 `[a,b]`
 > $$
 > {x_i} = {{b + a} \over 2} + {{b - a} \over 2}\cos {{\left( {2i - 1} \right)\pi } \over {2n}}
 > $$
@@ -1353,9 +1344,9 @@ $$
 > $$
 > \left| {\left( {x - {x_1}} \right) \cdots \left( {x - {x_n}} \right)} \right| \le {{{{\left( {{{b - a} \over 2}} \right)}^n}} \over {{2^{n - 1}}}}
 > $$
-> 在区间[a,b]上成立。
+> 在区间 `[a,b]` 上成立。
 
-**举例**：在区间[0,π/2]找出4个切比雪夫基点进行插值，找出切比雪夫插值误差的上界，在区间中f(x)=sinx。
+**举例**：在区间 `[0,π/2]` 找出4个切比雪夫基点进行插值，找出切比雪夫插值误差的上界，在区间中f(x)=sinx。
 $$
 {x_i} = {{{\pi  \over 2} + 0} \over 2} + {{{\pi  \over 2} - 0} \over 2}\cos {{\left( {2i - 1} \right)\pi } \over 8},\quad i = 1,2,3,4
 $$
@@ -2142,7 +2133,7 @@ f'(x) = {{f(x + h) - f(x)} \over h} - {h \over 2}f''(c)
 $$
 其中c在x和x+h之间，$- {h \over 2}f''(c)$是误差项。
 
-**定理（推广中值定理）**：令f是区间[a,b]上的连续函数，令$x_1$，...，$x_n$是区间[a,b]上的点，$a_1$，...，$a_n$>0，则在a和b之间存在数字c满足
+**定理（推广中值定理）**：令f是区间 `[a,b]` 上的连续函数，令$x_1$，...，$x_n$是区间 `[a,b]` 上的点，$a_1$，...，$a_n$>0，则在a和b之间存在数字c满足
 $$
 (a_1+\cdots+a_n)f(c)=a_1f(x_1)+\cdots+a_nf(x_n)
 $$
@@ -2239,7 +2230,7 @@ $$
 $$
 \int_{{x_0}}^{{x_1}} {f(x)} dx = h\sum\limits_{i = 1}^m {f({w_i})}  + {{(b - a){h^2}} \over {24}}f''(c)
 $$
-其中h=(b-a)/m，c在a和b之间，$w_i$是[a,b]中m个相等子区间的中点。
+其中h=(b-a)/m，c在a和b之间，$w_i$是 `[a,b]` 中 m 个相等子区间的中点。
 
 
 
@@ -2285,11 +2276,11 @@ $$
 >
 > if $S_{[a,b]}-S_{[a,c]}-S_{[c,b]}<3\cdot TOL\cdot ({b-a \over b_{orig}-a_{orig}})$
 >
-> ​	接受$S_{[a,c]}+S_{[c,b]}$作为区间[a,b]上的近似
+> ​	接受$S_{[a,c]}+S_{[c,b]}$作为区间 `[a,b]` 上的近似
 >
 > else
 >
-> ​	对于区间[a,c]和[c,b]递归重复上面的步骤
+> ​	对于区间`[a,c]`和`[c,b]`递归重复上面的步骤
 >
 > end
 
@@ -2324,15 +2315,15 @@ end
 
 ### 高斯积分
 
-**定义**：一组在区间[a,b]上的非0函数{$p_0$，...，$p_n$}在区间[a,b]**正交**，当
+**定义**：一组在区间`[a,b]`上的非0函数{$p_0$，...，$p_n$}在区间`[a,b]`**正交**，当
 $$
 \int_a^b {{p_j}(x){p_k}(x)} dx = \left\{ \matrix{
   0\quad \quad j \ne k \hfill \cr 
    \ne 0\quad j = k \hfill \cr}  \right.
 $$
-**定理**：如果{$p_0$，...，$p_n$}是区间[a,b]上多项式的正交集，其中$\deg p_i=i$，则{$p_0$，...，$p_n$}是在区间[a,b]由区间[a,b]由至多n个多项式所张的向量空间的基。
+**定理**：如果{$p_0$，...，$p_n$}是区间`[a,b]`上多项式的正交集，其中$\deg p_i=i$，则{$p_0$，...，$p_n$}是在区间`[a,b]`由区间`[a,b]`由至多n个多项式所张的向量空间的基。
 
-**定理**：如果{$p_0$，...，$p_n$}是区间[a,b]上多项式的正交集，且$\deg p_i=i$，则$p_i$在区间(a,b)上有i个不同的根。
+**定理**：如果{$p_0$，...，$p_n$}是区间`[a,b]`上多项式的正交集，且$\deg p_i=i$，则$p_i$在区间(a,b)上有i个不同的根。
 
 **高斯积分**
 $$
@@ -2349,9 +2340,9 @@ $$
 
 上面带横线的项表示不进行计算，$c_i$可以查表获得(包括n=1,2,3,4)
 
-**定理**：高斯积分方法，在区间[—1,1]上使用n阶勒让德多项式，具有2n-1阶精度。
+**定理**：高斯积分方法，在区间`[-1,1]`上使用n阶勒让德多项式，具有2n-1阶精度。
 
-一般区间[a,b]的积分可以通过替代t=(2x-a-b)/(b-a)得到
+一般区间`[a,b]`的积分可以通过替代t=(2x-a-b)/(b-a)得到
 $$
 \int_a^b {f(x)} dx = \int_{ - 1}^1 {f\left( {{{(b - a)t + b + a} \over 2}} \right)} {{b - a} \over 2}dt
 $$
