--- a/多媒体.md
+++ b/多媒体.md
@@ -44,6 +44,8 @@ D:\VisualStudio\Community\VC\Auxiliary\Build\vcvarsall.bat amd64
 ├─include
 └─lib
 
+#### Visual Studio
+
 先设置项目，在 `c/c++` -> `general` -> `Additional Include Directories` 中添加头文件目录 include，同时设置 `SDL checks` 为 No。再在 `Linker` -> `General` -> `Additional Library Directories` 添加 lib 目录，最后在执行时，需要将 bin 文件夹的 dll 文件拷贝至执行文件路径中。
 
 下面是一个简单示例
@@ -80,6 +82,35 @@ postproc.lib
 swscale.lib
 swresample.lib
 ```
+
+
+#### Cmake
+
+在 CmakeLists.txt 中添加以下内容
+
+```cmake
+# 设置 FFMPEG 的目录  
+set(FFMPEG_DEV_ROOT "D:/ffmpeg-7.0.2")  
+  
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)  
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)  
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)  
+  
+  
+# set ffmpeg develop environment  
+include_directories(${FFMPEG_DEV_ROOT}/include)  # 头文件
+link_directories(${FFMPEG_DEV_ROOT}/lib)         # 链接动态链接库
+link_libraries(  
+        avcodec  
+        avformat        avfilter        avdevice        swresample        swscale        avutil)  
+  
+# copy dlls  
+file(GLOB ffmpeg_shared_libries ${FFMPEG_DEV_ROOT}/bin/*dll)  
+file(COPY ${ffmpeg_shared_libries} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+
+add_executable(ffmpeg_libav_test main.cpp)
+```
+
 
 
 ### 解码视频
