--- a/多媒体.md
+++ b/多媒体.md
@@ -503,6 +503,124 @@ ffmpeg -i index.m3u8 -c copy out.mp4
 
 
 
+# SDL
+
+SDL 是一个跨平台的开发库，提供了通过 OpenGL 和 Direct3D 访问音频、视频、键盘等的底层访问。
+
+SDL 的下载地址：https://github.com/libsdl-org/SDL/releases
+
+## 开发环境搭建
+
+### CMake
+
+在 CMakeLists.txt 中添加
+
+```cmake
+set(SDL_DEV_ROOT "D:/SDL2-2.30.6")
+
+include_directories(${SDL_DEV_ROOT}/include)  
+link_directories(${SDL_DEV_ROOT}/lib/x64)  
+link_libraries(SDL2)
+
+file(COPY ${SDL_DEV_ROOT}/lib/x64/SDL2.dll DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+```
+
+
+## 使用示例
+
+### 使用 SDL 和 FFmpeg 播放视频
+
+使用 FFmpeg 解码视频的过程不必赘述，下面介绍 SDL2 的用法
+
+引入的头文件为
+
+```c
+#include <SDL.h>  
+#include <SDL_thread.h>
+```
+
+定义的变量
+
+```c
+SDL_Texture *texture = NULL;  
+SDL_Window *screen = NULL;  
+SDL_Renderer *renderer;  
+SDL_Event event;
+```
+
+首先先初始化 SDL
+
+```c
+if (SDL_Init(SDL_INIT_VIDEO | SDL_INIT_AUDIO | SDL_INIT_TIMER)) {  
+    fprintf(stderr, "Could not initialize SDL - %s\n", SDL_GetError());  
+    exit(1);  
+}
+```
+
+创建一个窗口
+
+```c
+screen = SDL_CreateWindow("Player", SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, pCodecCtx->width, pCodecCtx->height, SDL_WINDOW_FULLSCREEN | SDL_WINDOW_OPENGL);  
+```
+
+
+> [!WARNING]
+> 在调试时，设置 SDL_WINDOW_FULLSCREEN 时，SDL 窗口会覆盖全屏，可以换成 SDL_WINDOW_HIDDEN
+
+
+创建渲染器
+
+```c
+renderer = SDL_CreateRenderer(screen, -1, 0);
+```
+
+创建纹理
+
+```c
+texture = SDL_CreateTexture(renderer, SDL_PIXELFORMAT_YV12, SDL_TEXTUREACCESS_STREAMING, pCodecCtx->width, pCodecCtx->height);
+
+int uvPitch = pCodecCtx->width / 2;
+```
+
+在 av_read_frame 的循环中，每转换完一帧，就渲染一帧
+
+```c
+sws_scale  
+(  
+    sws_ctx,  
+    pFrame->data,  
+    pFrame->linesize,  
+    0,  
+    pCodecCtx->height,  
+    cFrame->data,  
+    cFrame->linesize  
+);  
+  
+SDL_UpdateYUVTexture(texture, NULL, cFrame->data[0], pCodecCtx->width, cFrame->data[1], uvPitch, cFrame->data[2], uvPitch);  
+SDL_RenderClear(renderer);  
+SDL_RenderCopy(renderer, texture, NULL, NULL);  
+SDL_RenderPresent(renderer);
+```
+
+在循环中，还可以监听事件
+
+```c
+SDL_PollEvent(&event);  
+switch (event.type) {  
+    case SDL_QUIT:  
+        SDL_DestroyTexture(texture);  
+	    SDL_DestroyRenderer(renderer);  
+	    SDL_DestroyWindow(screen);  
+	    SDL_Quit();  
+	    exit(0);  
+    default:  
+        break;  
+}
+```
+
+
+
+
 
 # WebRTC
 
