--- a/深度学习库.md
+++ b/深度学习库.md
@@ -512,7 +512,7 @@ array([[[[0.61720157, 0.46546352],
          [0.32832325, 0.448591  ]]]], dtype=float32)>
 ```
 
-默认 axis = 0，所以从第一维度抽取切片。因为 indices 为 [[1,2], [0,1]]，是一个 2 × 2 的矩阵，所以切片的第一维变成了 (2,2)，可以看到 slices 变成了 (2,2,2,2) 维的张量。而 indices[0, :] = [1,2]，表明 slices[0, :, :, :] = params[1:3, :, :]，indices[1, :] = [0, 1]，表明 slices[1, :, :, :] = params[0:2, :, :]。
+默认 axis = 0，所以从第一维度抽取切片。因为 indices 为 `[[1,2], [0,1]]`，是一个 2 × 2 的矩阵，所以切片的第一维变成了 (2,2)，可以看到 slices 变成了 (2,2,2,2) 维的张量。而 `indices[0, :] = [1,2]`，表明 `slices[0, :, :, :] = params[1:3, :, :]`，`indices[1, :] = [0, 1]`，表明 `slices[1, :, :, :] = params[0:2, :, :]`。
 
 
 ### tf.keras.layers
