--- a/多媒体.md
+++ b/多媒体.md
@@ -2,6 +2,7 @@
 # FFmpeg
 
 
+
 ## 编译 FFmpeg
 
 ### 使用 Visual studio 进行编译
@@ -413,6 +414,61 @@ ffplay -f rawvideo -pixel_format rgb8 -video_size 160x120 out.raw
 
 > [!NOTE]
 > 注意 ffplay 的参数可能随着版本的变化有所改变
+
+
+
+## ffmpeg android 编程
+
+在 [Releases · arthenica/ffmpeg-kit (github.com)](https://github.com/arthenica/ffmpeg-kit/releases) 中下载需要的 aar 文件。
+
+在 android studio 创建项目，设置 `gradle/wrapper/gradle-wrapper.properties` 中设置 
+
+```properties
+distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.7-bin.zip
+```
+
+此外设置 `build.gradle` 
+
+```gradle
+buildscript{
+    repositories{
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
+        mavenLocal()
+        mavenCentral()
+        google()
+        jcenter()
+    }
+}
+```
+
+
+在 `app` 文件夹中创建一个 `libs` 文件夹，将 aar 文件放在该文件夹中，在 `app/build.gradle` 中设置
+
+```gradle
+dependencies {
+    implementation 'com.arthenica:smart-exception-java:0.2.1'
+    implementation files("libs/ffmpeg-kit-min-gpl-6.0-2.aar")
+	...
+}
+```
+
+使用时参考命令行的使用方式，如下所示
+
+```kotlin
+import com.arthenica.ffmpegkit.FFmpegKit
+import com.arthenica.ffmpegkit.ReturnCode
+
+// ...
+val session = FFmpegKit.execute("-version")
+var output = ""
+if (ReturnCode.isSuccess(session.returnCode)) {
+	output = session.output
+}
+```
 
 
 
