--- a/工具使用.md
+++ b/工具使用.md
@@ -286,6 +286,185 @@ emcc -o hello2.html hello2.c -O3 -s WASM=1 --shell-file html_template/shell_mini
 这里的 shell_minimal.html 的位置位于 upstream/emscription/src 中（该位置可能不固定）
 
 
+### 一个例子
+
+在任意位置创建一个文件夹，存放 c 文件，如 cal.c，然后调用以下命令
+
+```bat
+set emsdk_path=E:/work/emsdk
+set template_path=%emsdk_path%/upstream/emscripten/src/shell_minimal.html
+set filename=cal.c
+set out=gcal.html
+%emsdk_path%/emsdk activate latest & emcc -o %out% %filename%  -s WASM=1 -s "EXTRA_EXPORTED_RUNTIME_METHODS=['ccall']" --shell-file %template_path%
+```
+
+官方提供了一个更加复杂的例子：[Compiling an Existing C Module to WebAssembly - WebAssembly | MDN (mozilla.org)](https://developer.mozilla.org/en-US/docs/WebAssembly/existing_C_to_Wasm)
+
+```sh
+mkdir test_webp
+cd test_webp
+git clone https://github.com/webmproject/libwebp
+```
+
+在 test_webp 中创建一个 c 文件，命名为 webp.c
+
+```c
+#include "emscripten.h"
+#include "src/webp/encode.h"
+
+EMSCRIPTEN_KEEPALIVE
+int version() {
+  return WebPGetEncoderVersion();
+}
+```
+
+编写 shell 脚本 run.sh
+
+```sh
+emsdk_path=E:/work/emsdk
+$emsdk_path/emsdk activate latest & emcc -s WASM=1 -s EXPORTED_RUNTIME_METHODS='["cwrap"]' \
+ -I libwebp  webp.c libwebp/src/{dec,dsp,demux,enc,mux,utils}/*.c  libwebp/sharpyuv/*.c
+```
+
+执行 shell 脚本
+
+```sh
+sh run.sh
+```
+
+等待一段时间，生成 a.out.js 和 a.out.wasm
+
+创建一个 html 文件来测试
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>hello</title>
+</head>
+
+<body>
+
+</body>
+<script src="./a.out.js"></script>
+<script>
+    Module.onRuntimeInitialized = async () => {
+        const api = {
+            version: Module.cwrap("version", "number", []),
+        };
+        console.log(api.version());
+    };
+</script>
+
+</html>
+```
+
+测试加载图片，在 webp.c 中添加以下代码
+
+```c
+#include <stdlib.h>
+int result[2];
+EMSCRIPTEN_KEEPALIVE
+void encode(uint8_t* img_in, int width, int height, float quality) {
+  uint8_t* img_out;
+  size_t size;
+
+  size = WebPEncodeRGBA(img_in, width, height, width * 4, quality, &img_out);
+
+  result[0] = (int)img_out;
+  result[1] = size;
+}
+
+EMSCRIPTEN_KEEPALIVE
+void free_result(uint8_t* result) {
+  WebPFree(result);
+}
+
+EMSCRIPTEN_KEEPALIVE
+int get_result_pointer() {
+  return result[0];
+}
+
+EMSCRIPTEN_KEEPALIVE
+int get_result_size() {
+  return result[1];
+}
+
+
+EMSCRIPTEN_KEEPALIVE
+uint8_t* create_buffer(int width, int height) {
+  return malloc(width * height * 4 * sizeof(uint8_t));
+}
+
+EMSCRIPTEN_KEEPALIVE
+void destroy_buffer(uint8_t* p) {
+  free(p);
+}
+```
+
+js 代码如下
+
+```js
+async function loadImage(src) {
+	// Load image
+	const imgBlob = await fetch(src).then((resp) => resp.blob());
+	const img = await createImageBitmap(imgBlob);
+	// Make canvas same size as image
+	const canvas = document.createElement("canvas");
+	canvas.width = img.width;
+	canvas.height = img.height;
+	// Draw image onto canvas
+	const ctx = canvas.getContext("2d");
+	ctx.drawImage(img, 0, 0);
+	return ctx.getImageData(0, 0, img.width, img.height);
+}
+const api = {
+	version: Module.cwrap("version", "number", []),
+	create_buffer: Module.cwrap("create_buffer", "number", ["number", "number"]),
+	destroy_buffer: Module.cwrap("destroy_buffer", "", ["number"]),
+	encode: Module.cwrap("encode", "", ["number", "number", "number", "number"]),
+	free_result: Module.cwrap("free_result", "", ["number"]),
+	get_result_pointer: Module.cwrap("get_result_pointer", "number", []),
+	get_result_size: Module.cwrap("get_result_size", "number", []),
+};
+
+async function loadbyWasm() {
+	console.time("wasm")
+	const image = await loadImage("./test_webp_wasm.webp");
+	// console.log(image)
+	const p = api.create_buffer(image.width, image.height);
+	Module.HEAP8.set(image.data, p);
+	api.encode(p, image.width, image.height, 100);
+	const resultPointer = api.get_result_pointer();
+	const resultSize = api.get_result_size();
+
+	const resultView = new Uint8Array(
+		Module.HEAP8.buffer,
+		resultPointer,
+		resultSize,
+	);
+	const result = new Uint8Array(resultView);
+	api.free_result(resultPointer);
+	api.destroy_buffer(p);
+	const blob = new Blob([result], { type: "image/webp" });
+	const blobURL = URL.createObjectURL(blob);
+	const img = document.createElement("img");
+	img.src = blobURL;
+	img.alt = "a useful description";
+	document.body.appendChild(img);
+	console.timeEnd("wasm")
+}
+```
+
+
+> [!WARNING]
+> 当编码质量过高时，会导致内存过大，所以需要在编译时设置 `-s ALLOW_MEMORY_GROWTH=1` 来允许内存增长
+
+
+
+
+
 ### 调用 C 中自定义方法
 
 
@@ -344,6 +523,169 @@ document.querySelector(".mybutton").addEventListener("click", function () {
 ```
 
 此时点击按钮便会出现对应的结果。
+
+假设 C 代码为
+
+```c
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+float EMSCRIPTEN_KEEPALIVE cal_zero_cross(float* arr, int size) {
+	int zero_cross = 0;
+	for (int i = 0; i < size-1; i++)
+	{
+		if (arr[i] * arr[i+1] < 0)
+		{
+			zero_cross++;
+		}
+	}
+	return zero_cross / (size * 1.0);
+}
+
+#ifdef __cplusplus
+}
+#endif
+```
+
+JS 调用时的代码为
+
+```js
+var arr = Array.from([])
+const size = 16000
+for (let index = 0; index < size; index++) {
+	arr.push(Math.sin(index) + Math.tan(index))
+}
+var result = Module.ccall(
+	"cal_zero_cross", // name of C function
+	'number', // return type
+	['number', 'number'], // argument types
+	[arr, size]   // arguments
+); 
+console.log(result)
+```
+
+参数类型支持 `number`（对应于 C 中的 `integer`, `float` 或者 `general pointer`），`string`（对应于 C 中的 `char *`），`array` （对应于 C 中的数组）
+
+
+
+## FFmpeg-wasm
+
+使用 webassembly 将 ffmpeg 迁移到 web 端（在运行效率上存在较大差距）
+
+### 安装
+
+编写 shell 脚本下载文件
+
+```sh
+NPM_URL="https://registry.npmmirror.com"
+ROOT="assets"
+
+FFMPEG_VERSION="0.12.7"
+UTIL_VERSION="0.12.0"
+CORE_VERSION="0.12.5"
+CORE_MT_VERSION="0.12.5"
+
+FFMPEG_TGZ="ffmpeg-${FFMPEG_VERSION}.tgz"
+UTIL_TGZ="util-${UTIL_VERSION}.tgz"
+CORE_TGZ="core-${CORE_VERSION}.tgz"
+CORE_MT_TGZ="core-mt-${CORE_MT_VERSION}.tgz"
+
+FFMPEG_TGZ_URL="${NPM_URL}/@ffmpeg/ffmpeg/-/${FFMPEG_TGZ}"
+UTIL_TGZ_URL="${NPM_URL}/@ffmpeg/util/-/${UTIL_TGZ}"
+CORE_TGZ_URL="${NPM_URL}/@ffmpeg/core/-/${CORE_TGZ}"
+CORE_MT_TGZ_URL="${NPM_URL}/@ffmpeg/core-mt/-/${CORE_MT_TGZ}"
+
+
+wget -P $ROOT $FFMPEG_TGZ_URL --no-check-certificate
+wget -P $ROOT $UTIL_TGZ_URL --no-check-certificate
+wget -P $ROOT $CORE_TGZ_URL --no-check-certificate
+wget -P $ROOT $CORE_MT_TGZ_URL --no-check-certificate
+
+
+if [ ! -d "${ROOT}/ffmpeg" ];then
+    mkdir "${ROOT}/ffmpeg"
+fi
+
+if [ ! -d "${ROOT}/util" ];then
+    mkdir "${ROOT}/util"
+fi
+
+if [ ! -d "${ROOT}/core" ];then
+    mkdir "${ROOT}/core"
+fi
+
+if [ ! -d "${ROOT}/core-mt" ];then
+    mkdir "${ROOT}/core-mt"
+fi
+
+
+tar -xf "${ROOT}/${FFMPEG_TGZ}"  -C "${ROOT}/ffmpeg"
+tar -xf "${ROOT}/${UTIL_TGZ}"  -C "${ROOT}/util"
+tar -xf "${ROOT}/${CORE_TGZ}"  -C "${ROOT}/core"
+tar -xf "${ROOT}/${CORE_MT_TGZ}"  -C "${ROOT}/core-mt"
+
+rm "${ROOT}/${FFMPEG_TGZ}"
+rm "${ROOT}/${UTIL_TGZ}"
+rm "${ROOT}/${CORE_TGZ}"
+rm "${ROOT}/${CORE_MT_TGZ}"
+```
+
+下载后需要的文件位于 assets 中
+
+### 使用
+
+编写一个 html 用于测试
+
+```html
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+    <title></title>  
+</head>  
+<body>  
+<h3>Upload a video to transcode to mp4 (x264) and play!</h3>  
+<video id="output-video" controls></video><br/>  
+<input type="file" id="uploader">  
+<p id="message"></p>  
+</body>  
+<script src="assets/ffmpeg/package/dist/umd/ffmpeg.js"></script>  
+<script src="assets/util/package/dist/umd/index.js"></script>  
+<script>  
+    const { fetchFile } = FFmpegUtil;  
+    const { FFmpeg } = FFmpegWASM;  
+    let ffmpeg = null;  
+    const transcode = async ({ target: { files } }) => {  
+        const message = document.getElementById('message');  
+        if (ffmpeg === null) {  
+            ffmpeg = new FFmpeg();  
+            ffmpeg.on("log", ({ message }) => {  
+                console.log(message);  
+            })  
+            ffmpeg.on("progress", ({ progress, time }) => {  
+                message.innerHTML = `${progress * 100} %, time: ${time / 1000000} s`;  
+            });  
+            await ffmpeg.load({  
+                coreURL: "/assets/core/package/dist/umd/ffmpeg-core.js",  
+            });  
+        }  
+        const { name } = files[0];  
+        await ffmpeg.writeFile(name, await fetchFile(files[0]));  
+        message.innerHTML = 'Start transcoding';  
+        console.time('exec');  
+        await ffmpeg.exec(['-i', name,  'output.mp4']);  
+        console.timeEnd('exec');  
+        message.innerHTML = 'Complete transcoding';  
+        const data = await ffmpeg.readFile('output.mp4');  
+  
+        const video = document.getElementById('output-video');  
+        video.src = URL.createObjectURL(new Blob([data.buffer], { type: 'video/mp4' }));  
+    }  
+    const elm = document.getElementById('uploader');  
+    elm.addEventListener('change', transcode);  
+</script>  
+</html>
+```
 
 
 # 正则表达式
@@ -2243,7 +2585,7 @@ echo -e "开始"
 ### 常见错误
 
 
->[: XXXX: unexpected operator
+>`[: XXXX: unexpected operator`
 
 这种情况大概率是由于在程序中判断变量是否与另一个值相等使用了下面的语法，且在运行时使用 `sh run.sh` 命令。
 
